@@ -44,19 +44,28 @@ begin_comment
 comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 
-begin_interface
-DECL|interface|CarrotParams
+begin_comment
+comment|/**  * Carrot2 parameter mapping (recognized and mapped if passed via Solr configuration).  */
+end_comment
+
+begin_class
+DECL|class|CarrotParams
 specifier|public
-interface|interface
+specifier|final
+class|class
 name|CarrotParams
 block|{
 DECL|field|CARROT_PREFIX
+specifier|private
+specifier|static
 name|String
 name|CARROT_PREFIX
 init|=
 literal|"carrot."
 decl_stmt|;
 DECL|field|ALGORITHM
+specifier|public
+specifier|static
 name|String
 name|ALGORITHM
 init|=
@@ -65,6 +74,8 @@ operator|+
 literal|"algorithm"
 decl_stmt|;
 DECL|field|TITLE_FIELD_NAME
+specifier|public
+specifier|static
 name|String
 name|TITLE_FIELD_NAME
 init|=
@@ -73,6 +84,8 @@ operator|+
 literal|"title"
 decl_stmt|;
 DECL|field|URL_FIELD_NAME
+specifier|public
+specifier|static
 name|String
 name|URL_FIELD_NAME
 init|=
@@ -81,6 +94,8 @@ operator|+
 literal|"url"
 decl_stmt|;
 DECL|field|SNIPPET_FIELD_NAME
+specifier|public
+specifier|static
 name|String
 name|SNIPPET_FIELD_NAME
 init|=
@@ -89,6 +104,8 @@ operator|+
 literal|"snippet"
 decl_stmt|;
 DECL|field|LANGUAGE_FIELD_NAME
+specifier|public
+specifier|static
 name|String
 name|LANGUAGE_FIELD_NAME
 init|=
@@ -97,6 +114,8 @@ operator|+
 literal|"lang"
 decl_stmt|;
 DECL|field|CUSTOM_FIELD_NAME
+specifier|public
+specifier|static
 name|String
 name|CUSTOM_FIELD_NAME
 init|=
@@ -105,6 +124,8 @@ operator|+
 literal|"custom"
 decl_stmt|;
 DECL|field|PRODUCE_SUMMARY
+specifier|public
+specifier|static
 name|String
 name|PRODUCE_SUMMARY
 init|=
@@ -113,6 +134,8 @@ operator|+
 literal|"produceSummary"
 decl_stmt|;
 DECL|field|SUMMARY_FRAGSIZE
+specifier|public
+specifier|static
 name|String
 name|SUMMARY_FRAGSIZE
 init|=
@@ -121,6 +144,8 @@ operator|+
 literal|"fragSize"
 decl_stmt|;
 DECL|field|SUMMARY_SNIPPETS
+specifier|public
+specifier|static
 name|String
 name|SUMMARY_SNIPPETS
 init|=
@@ -129,6 +154,8 @@ operator|+
 literal|"summarySnippets"
 decl_stmt|;
 DECL|field|NUM_DESCRIPTIONS
+specifier|public
+specifier|static
 name|String
 name|NUM_DESCRIPTIONS
 init|=
@@ -137,6 +164,8 @@ operator|+
 literal|"numDescriptions"
 decl_stmt|;
 DECL|field|OUTPUT_SUB_CLUSTERS
+specifier|public
+specifier|static
 name|String
 name|OUTPUT_SUB_CLUSTERS
 init|=
@@ -145,6 +174,8 @@ operator|+
 literal|"outputSubClusters"
 decl_stmt|;
 DECL|field|LEXICAL_RESOURCES_DIR
+specifier|public
+specifier|static
 name|String
 name|LEXICAL_RESOURCES_DIR
 init|=
@@ -153,6 +184,8 @@ operator|+
 literal|"lexicalResourcesDir"
 decl_stmt|;
 DECL|field|LANGUAGE_CODE_MAP
+specifier|public
+specifier|static
 name|String
 name|LANGUAGE_CODE_MAP
 init|=
@@ -161,7 +194,6 @@ operator|+
 literal|"lcmap"
 decl_stmt|;
 DECL|field|CARROT_PARAM_NAMES
-specifier|public
 specifier|static
 specifier|final
 name|Set
@@ -184,6 +216,8 @@ name|SNIPPET_FIELD_NAME
 argument_list|,
 name|LANGUAGE_FIELD_NAME
 argument_list|,
+name|CUSTOM_FIELD_NAME
+argument_list|,
 name|PRODUCE_SUMMARY
 argument_list|,
 name|SUMMARY_FRAGSIZE
@@ -195,10 +229,18 @@ argument_list|,
 name|OUTPUT_SUB_CLUSTERS
 argument_list|,
 name|LEXICAL_RESOURCES_DIR
+argument_list|,
+name|LANGUAGE_CODE_MAP
 argument_list|)
 decl_stmt|;
+comment|/** No instances. */
+DECL|method|CarrotParams
+specifier|private
+name|CarrotParams
+parameter_list|()
+block|{}
 block|}
-end_interface
+end_class
 
 end_unit
 
