@@ -1419,10 +1419,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|solrStopWordsUsedInCarrot2Clustering
+DECL|method|testSolrStopWordsUsedInCarrot2Clustering
 specifier|public
 name|void
-name|solrStopWordsUsedInCarrot2Clustering
+name|testSolrStopWordsUsedInCarrot2Clustering
 parameter_list|()
 throws|throws
 name|Exception
@@ -1508,10 +1508,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|solrStopWordsNotDefinedOnAFieldForClustering
+DECL|method|testSolrStopWordsNotDefinedOnAFieldForClustering
 specifier|public
 name|void
-name|solrStopWordsNotDefinedOnAFieldForClustering
+name|testSolrStopWordsNotDefinedOnAFieldForClustering
 parameter_list|()
 throws|throws
 name|Exception
@@ -1639,10 +1639,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|highlightingOfMultiValueField
+DECL|method|testHighlightingOfMultiValueField
 specifier|public
 name|void
-name|highlightingOfMultiValueField
+name|testHighlightingOfMultiValueField
 parameter_list|()
 throws|throws
 name|Exception
@@ -1797,10 +1797,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|concatenatingMultipleFields
+DECL|method|testConcatenatingMultipleFields
 specifier|public
 name|void
-name|concatenatingMultipleFields
+name|testConcatenatingMultipleFields
 parameter_list|()
 throws|throws
 name|Exception
@@ -1947,10 +1947,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|highlightingMultipleFields
+DECL|method|testHighlightingMultipleFields
 specifier|public
 name|void
-name|highlightingMultipleFields
+name|testHighlightingMultipleFields
 parameter_list|()
 throws|throws
 name|Exception
@@ -2197,10 +2197,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|oneCarrot2SupportedLanguage
+DECL|method|testOneCarrot2SupportedLanguage
 specifier|public
 name|void
-name|oneCarrot2SupportedLanguage
+name|testOneCarrot2SupportedLanguage
 parameter_list|()
 throws|throws
 name|Exception
@@ -2297,10 +2297,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|oneCarrot2SupportedLanguageOfMany
+DECL|method|testOneCarrot2SupportedLanguageOfMany
 specifier|public
 name|void
-name|oneCarrot2SupportedLanguageOfMany
+name|testOneCarrot2SupportedLanguageOfMany
 parameter_list|()
 throws|throws
 name|Exception
@@ -2397,10 +2397,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|languageCodeMapping
+DECL|method|testLanguageCodeMapping
 specifier|public
 name|void
-name|languageCodeMapping
+name|testLanguageCodeMapping
 parameter_list|()
 throws|throws
 name|Exception
@@ -2508,10 +2508,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|passingOfCustomFields
+DECL|method|testPassingOfCustomFields
 specifier|public
 name|void
-name|passingOfCustomFields
+name|testPassingOfCustomFields
 parameter_list|()
 throws|throws
 name|Exception
@@ -2663,10 +2663,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|customTokenizer
+DECL|method|testCustomTokenizer
 specifier|public
 name|void
-name|customTokenizer
+name|testCustomTokenizer
 parameter_list|()
 throws|throws
 name|Exception
@@ -2763,10 +2763,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|customStemmer
+DECL|method|testCustomStemmer
 specifier|public
 name|void
-name|customStemmer
+name|testCustomStemmer
 parameter_list|()
 throws|throws
 name|Exception
